{
    "name": "PlayerGamepad",
    "maps": [
        {
            "name": "GamePlay",
            "id": "cb41fcf4-d20a-4b3a-9b59-2e5a2d10076f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "7fb845bd-1f8f-42ac-85d2-faa8037c49d3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8bdf2e68-0dc9-4b0e-9142-bf057d3cb30f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "14957a0a-c398-4c2b-8855-378d899b7bcd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookingRightStick",
                    "type": "PassThrough",
                    "id": "7979a5e7-7c6a-4fbd-a908-5f1e20124396",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f469351b-5403-4454-b184-b7904410fa22",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d3902d9-edb9-4eb3-90fb-273eabee71cf",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a6735e7-4311-430e-9e17-af148fa3a07f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59e25198-ebfc-44c1-ab8d-0ccc29c6b85e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookingRightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}